Char Jump + Enemy + Collision + GameOver

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <script src="lib/p5.js"></script>
     <script src="lib/p5.sound.min.js"></script>
+    <script src="lib/p5.collide2d.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
   </head>
   <body>
     <script src="class/background.js"></script>
+    <script src="class/char-animation.js"></script>
     <script src="class/character.js"></script>
+    <script src="class/enemy.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
